--- a/public/app/components/templates/modal-profile.html
+++ b/public/app/components/templates/modal-profile.html
@@ -11,7 +11,7 @@
             </a>
             <div class="app-profile">
                 <div class="app__pull-left">
-                    <img class="app-profile__avatar" ng-src="{{ data.avatar }}">
+                    <img avatar class="app-profile__avatar" ng-src="{{ data.avatar }}">
                 </div>
                 <div class="app-profile__name">
                     <a class="app-profile__name">{{ data.name }}</a>
