--- a/public/app/game/templates/profile-game.html
+++ b/public/app/game/templates/profile-game.html
@@ -13,7 +13,10 @@
     <div ng-class="{'app-profile__show-pieces': hasLostPieces(player.lostPieces) }">
         <div class="app__pull-left">
             <a show-profile="player" href>
-                <img show-profile="player" class="app-profile__avatar" ng-src="{{ player.avatar }}">
+                <img avatar
+                     show-profile="player" 
+                     class="app-profile__avatar" 
+                     ng-src="{{ player.avatar }}">
             </a>
         </div>
         <div class="app-profile__name">
