--- a/public/app/ranking/templates/ranking.html
+++ b/public/app/ranking/templates/ranking.html
@@ -33,7 +33,9 @@
             <tr ng-repeat="rank in ranking" show-profile="rank" ng-class="{'is-user': rank.uid === user.uid }">
                 <td class="app-table__rank mdl-data-table__cell--non-numeric">{{ rank.position }}</td>
                 <td class="app-table__user mdl-data-table__cell--non-numeric">
-                    <img class="app-table__avatar" ng-src="{{rank.avatar}}">
+                    <img avatar
+                         class="app-table__avatar" 
+                         ng-src="{{rank.avatar}}">
                     <span class="app-table__name">{{ rank.name }}</span>
                 </td>
                 <td class="app-table__points">{{ rank.points }}</td>
