--- a/public/css/style.css
+++ b/public/css/style.css
@@ -268,6 +268,23 @@ a {
   margin-bottom: 24px;
 }
 
+.app-settings__loader,
+.app-settings__done {
+  position: absolute;
+  left: 24px;
+  top: 24px;
+}
+
+.app-settings__done .app-icon {
+  color: #4CAF50;
+}
+
+.app-done.hide {
+  transition: all 1s ease-out;
+  -webkit-transition: all 1s ease-in;
+  opacity: 0;
+}
+
 .app-form__choices-colors {
   margin-bottom: 16px;
 }
@@ -305,7 +322,13 @@ a {
 .app-form__select > .app-modal__settings-field {
   margin-left: 40px;
   width: calc(100% - 40px);
-  display: inherit;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.app-form__switch {
+  padding-bottom: 24px;
 }
 
 .app-form__switch > .app-modal__settings-field {
@@ -459,66 +482,11 @@ a {
   margin-bottom: -1px
 }
 
-.app-form__textfield>input:invalid:not(:focus):not(:required),
-.app-form__textfield>input:invalid:not(:focus):required.ng-empty.ng-dirty,
-.app-form__textfield>input:invalid:not(:focus):required.ng-not-empty,
-.app-form__textfield>input:invalid:not(:focus):required:not(:empty):not(.ng-empty):not(.ng-not-empty),
-.app-form__textfield>input:invalid:not(:focus):required[value]:not([value=""]):not(.ng-empty):not(.ng-not-empty),
-.app-form__textfield>input:not(:focus).ng-invalid:not(:required),.app-form__textfield>input:not(:focus).ng-invalid:required.ng-empty.ng-dirty,
-.app-form__textfield>input:not(:focus).ng-invalid:required.ng-not-empty,
-.app-form__textfield>input:not(:focus).ng-invalid:required:not(:empty):not(.ng-empty):not(.ng-not-empty),
-.app-form__textfield>input:not(:focus).ng-invalid:required[value]:not([value=""]):not(.ng-empty):not(.ng-not-empty),
-.app-form__textfield>textarea:invalid:not(:focus):not(:required),
-.app-form__textfield>textarea:invalid:not(:focus):required.ng-empty.ng-dirty,
-.app-form__textfield>textarea:invalid:not(:focus):required.ng-not-empty,
-.app-form__textfield>textarea:invalid:not(:focus):required:not(:empty):not(.ng-empty):not(.ng-not-empty),
-.app-form__textfield>textarea:invalid:not(:focus):required[value]:not([value=""]):not(.ng-empty):not(.ng-not-empty),
-.app-form__textfield>textarea:not(:focus).ng-invalid:not(:required),
-.app-form__textfield>textarea:not(:focus).ng-invalid:required.ng-empty.ng-dirty,
-.app-form__textfield>textarea:not(:focus).ng-invalid:required.ng-not-empty,
-.app-form__textfield>textarea:not(:focus).ng-invalid:required:not(:empty):not(.ng-empty):not(.ng-not-empty),
-.app-form__textfield>textarea:not(:focus).ng-invalid:required[value]:not([value=""]):not(.ng-empty):not(.ng-not-empty) {
+.app-form__textfield>input.ng-invalid,
+.app-form__textfield>textarea.ng-invalid {
   border-color: #F44336;
-  border-width: 2px
-}
-
-.app-form__textfield>input:invalid:not(:focus):not(:required),
-.app-form__textfield>input:invalid:not(:focus):required.ng-empty.ng-dirty,
-.app-form__textfield>input:invalid:not(:focus):required.ng-not-empty,
-.app-form__textfield>input:invalid:not(:focus):required:not(:empty):not(.ng-empty):not(.ng-not-empty),
-.app-form__textfield>input:invalid:not(:focus):required[value]:not([value=""]):not(.ng-empty):not(.ng-not-empty),
-.app-form__textfield>input:not(:focus).ng-invalid:not(:required),
-.app-form__textfield>input:not(:focus).ng-invalid:required.ng-empty.ng-dirty,
-.app-form__textfield>input:not(:focus).ng-invalid:required.ng-not-empty,
-.app-form__textfield>input:not(:focus).ng-invalid:required:not(:empty):not(.ng-empty):not(.ng-not-empty),
-.app-form__textfield>input:not(:focus).ng-invalid:required[value]:not([value=""]):not(.ng-empty):not(.ng-not-empty) {
+  border-width: 2px;
   margin-bottom: -1px
-}
-
-.app-form__textfield>input:invalid:not(:focus):not(:required)~label,
-.app-form__textfield>input:invalid:not(:focus):required.ng-not-empty~label,
-.app-form__textfield>input:invalid:not(:focus):required:not(:empty):not(.ng-empty):not(.ng-not-empty)~label,
-.app-form__textfield>input:invalid:not(:focus):required[value]:not([value=""]):not(.ng-empty):not(.ng-not-empty)~label,
-.app-form__textfield>input:not(:focus).ng-invalid:not(:required)~label,
-.app-form__textfield>input:not(:focus).ng-invalid:required.ng-not-empty~label,
-.app-form__textfield>input:not(:focus).ng-invalid:required:not(:empty):not(.ng-empty):not(.ng-not-empty)~label,
-.app-form__textfield>input:not(:focus).ng-invalid:required[value]:not([value=""]):not(.ng-empty):not(.ng-not-empty)~label,
-.app-form__textfield>textarea:invalid:not(:focus):not(:required)~label,
-.app-form__textfield>textarea:invalid:not(:focus):required.ng-not-empty~label,
-.app-form__textfield>textarea:invalid:not(:focus):required:not(:empty):not(.ng-empty):not(.ng-not-empty)~label,
-.app-form__textfield>textarea:invalid:not(:focus):required[value]:not([value=""]):not(.ng-empty):not(.ng-not-empty)~label,
-.app-form__textfield>textarea:not(:focus).ng-invalid:not(:required)~label,
-.app-form__textfield>textarea:not(:focus).ng-invalid:required.ng-not-empty~label,
-.app-form__textfield>textarea:not(:focus).ng-invalid:required:not(:empty):not(.ng-empty):not(.ng-not-empty)~label,
-.app-form__textfield>textarea:not(:focus).ng-invalid:required[value]:not([value=""]):not(.ng-empty):not(.ng-not-empty)~label {
-  color: #F44336
-}
-
-.app-form__textfield:not(.app-form__textfield--float-label)>input:invalid:not(:focus):required.ng-empty.ng-dirty~label,
-.app-form__textfield:not(.app-form__textfield--float-label)>input:not(:focus).ng-invalid:required.ng-empty.ng-dirty~label,
-.app-form__textfield:not(.app-form__textfield--float-label)>textarea:invalid:not(:focus):required.ng-empty.ng-dirty~label,
-.app-form__textfield:not(.app-form__textfield--float-label)>textarea:not(:focus).ng-invalid:required.ng-empty.ng-dirty~label {
-  color: #F44336
 }
 
 @keyframes mui-node-inserted {
@@ -2217,10 +2185,6 @@ a {
     min-width: 40px;
   }
 
-  .app-button__fixed .app-button--invite-friends {
-    display: none;
-  }
-
   .app-button__fixed--color .app-button--color:nth-of-type(2) {
     bottom: 52px;
   }
@@ -2377,6 +2341,11 @@ a {
   }
 
   .app-head .app-button__create-game {
+    display: none;
+  }
+
+  .app-button__fixed .app-button--invite-friends,
+  .app-button__fixed .app-button--settings {
     display: none;
   }
 }
@@ -2882,6 +2851,24 @@ a {
 
   .mdl-data-table td:first-of-type, .mdl-data-table th:first-of-type {
     padding-left: 12px;
+  }
+
+  .app-form__choices-colors .app-modal__settings-field {
+    padding-top: 8px;
+  }
+
+  .app-form__choices-colors button {
+    margin-right: 8px;
+  }
+
+  .app-form__choices-colors button.app-button {
+    height: 24px;
+    width: 24px;
+    min-width: 24px;
+  }
+
+  .app-form__choices-colors button.checked {
+    border-width: 2px;
   }
 
   .app-table {
