--- a/public/index.ejs
+++ b/public/index.ejs
@@ -174,6 +174,13 @@
                     </a>
                     <a class="mdl-navigation__link" 
                        href
+                       ng-click="closeDrawer()"
+                       show-modal="#modal-settings">
+                        <i class="material-icons">settings</i>
+                        {{ 'settings' | translate }}
+                    </a>
+                    <a class="mdl-navigation__link" 
+                       href
                        ng-click="inviteFriends()">
                         <i class="material-icons">person_add</i>
                         {{ 'invite' | translate }}
@@ -200,6 +207,10 @@
                         show-modal="#modal-create-game">
                     <i class="material-icons">games</i>
                 </button>
+                <button class="app-button app-button--settings mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect"
+                        show-modal="#modal-settings">
+                    <i class="material-icons">settings</i>
+                </button>
                 <button class="app-button app-button--invite-friends mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect"
                         ng-click="inviteFriends()">
                     <i class="material-icons">person_add</i>
@@ -221,6 +232,7 @@
         <script src="socket.io/socket.io.js"></script>
 
         <script src="chess.js"></script>
+        <script src="utils.js"></script>
 
         <script src="lib/jquery.min.js"></script>
         <script src="lib/jquery-ui.min.js"></script>
